Alterações no front-end das telas de login.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,22 +9,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CategoriasActivity"
+        <activity android:name=".MenuActivity"></activity>
+        <activity
+            android:name=".CategoriasActivity"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".LimitesActivity" />
         <activity android:name=".GraficoActivity" />
-        <activity android:name=".DespesaActivity"
-            android:theme="@style/DespesaTheme"
-            android:label="Despesa" />
-        <activity android:name=".ReceitaActivity"
-            android:theme="@style/ReceitaTheme"
-            android:label="Receita" />
+        <activity
+            android:name=".DespesaActivity"
+            android:label="Despesa"
+            android:theme="@style/DespesaTheme" />
+        <activity
+            android:name=".ReceitaActivity"
+            android:label="Receita"
+            android:theme="@style/ReceitaTheme" />
         <activity android:name=".ForgotPasswordActivity" />
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".CreateAccountActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".SplashScreen" android:theme="@style/SplashTheme">
+        <activity
+            android:name=".SplashScreen"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
